--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,6 @@
 
 .nav {
   grid-area: nav;
-  position: relative;
 }
 
 .nav::before {
@@ -44,7 +43,7 @@
   filter: blur(5px);
   width: 4rem;
   height: 70px;
-  right: -15px;
+  right: 0px;
   top: -2px;
   bottom: 0;
   z-index: 2;
@@ -64,5 +63,39 @@
       "nav"
       "main"
       "sidebar";
+  }
+  .nav {
+    overflow: auto;
+    border-bottom-width: 2px;
+    border-color: #e2e8f0;
+    padding-bottom: 0.5rem;
+  }
+  .main {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .profil {
+    justify-content: start;
+    gap: 0.75rem;
+    font-size: 0.875rem;
+  }
+  .text-[1.35rem] {
+    font-size: 1.35rem;
+  }
+  .text-base {
+    font-size: 1rem;
+  }
+  .grid-cols-[1fr_120px] {
+    grid-template-columns: 1fr 120px;
+  }
+  .pt-4 {
+    padding-top: 1rem;
+  }
+  .-mb-[4.5px] {
+    margin-bottom: -0.28125rem;
+  }
+  .size-6 {
+    height: 1.5rem;
+    width: 1.5rem;
   }
 }
