--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 @layer base {
   :root {
@@ -165,6 +168,19 @@ body {
   width: 10rem;
   height: 10rem;
   z-index: 4;
+}
+
+.sohne {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.input {
+  font-family: "PT Serif", serif;
+}
+
+textarea {
+  font-family: "Tinos", serif;
 }
 
 @media (max-width: 768px) {
