--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Syne:wght@400..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Tinos:ital,wght@0,400;0,700;1,400&display=swap");
 
 @layer base {
   :root {
@@ -87,124 +88,106 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.main {
-  display: grid;
-  grid-template-columns: 0.8fr auto;
-  grid-template-rows: 70px 1fr;
-  grid-template-areas:
-    "nav sidebar"
-    "content sidebar";
-  gap: 0;
-}
-
-.nav {
-  grid-area: nav;
-}
-
-.nav::before {
-  content: "";
-  position: absolute;
-  background-color: white;
-  filter: blur(5px);
-  width: 2rem;
-  height: 70px;
-  left: 0;
-  top: -2px;
-  bottom: 0;
-  z-index: 2;
-}
-.nav::after {
-  content: "";
-  position: absolute;
-  background-color: white;
-  filter: blur(5px);
-  width: 4rem;
-  height: 70px;
-  right: 0px;
-  top: -2px;
-  bottom: 0;
-  z-index: 2;
-}
-.sidebar {
-  grid-area: sidebar;
-  font-family: "Oswald", sans-serif;
-}
-.content {
-  grid-area: content;
-}
-
-.bookmark {
-  position: relative;
-}
-.bookmark::after {
-  content: "";
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  inset: 0;
-  background-color: #3b82f6;
-  clip-path: polygon(
-    50% 0%,
-    80% 10%,
-    100% 35%,
-    100% 70%,
-    80% 90%,
-    50% 100%,
-    20% 90%,
-    0% 70%,
-    0% 35%,
-    20% 10%
-  );
-}
-.tooltipContent {
-  position: relative;
-}
-.tooltipContent::after {
-  content: "";
-  position: absolute;
-  background-color: var(--primary);
-  top: 100%;
-  clip-path: polygon(47% 100%, 0 0, 100% 0);
-  width: 10rem;
-  height: 10rem;
-  z-index: 4;
-}
-
-.sohne {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-}
-
-.input {
-  font-family: "PT Serif", serif;
-}
-
-textarea {
-  font-family: "Tinos", serif;
-}
-
-@media (max-width: 768px) {
+@media (min-width: 1028px) {
   .main {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    display: grid;
+    grid-template-columns: 0.8fr auto;
+    grid-template-rows: 70px 1fr;
     grid-template-areas:
-      "nav"
-      "main"
-      "sidebar";
+      "nav sidebar"
+      "content sidebar";
+    gap: 0;
   }
+
   .nav {
-    overflow: auto;
-    border-bottom-width: 2px;
-    border-color: #e2e8f0;
-    padding-bottom: 0.5rem;
+    grid-area: nav;
   }
+
+  .nav::before {
+    content: "";
+    position: absolute;
+    background-color: white;
+    filter: blur(5px);
+    width: 2rem;
+    height: 70px;
+    left: 0;
+    top: -2px;
+    bottom: 0;
+    z-index: 2;
+  }
+  .nav::after {
+    content: "";
+    position: absolute;
+    background-color: white;
+    filter: blur(5px);
+    width: 4rem;
+    height: 70px;
+    right: 0px;
+    top: -2px;
+    bottom: 0;
+    z-index: 2;
+  }
+  .sidebar {
+    grid-area: sidebar;
+    font-family: "Oswald", sans-serif;
+  }
+  .content {
+    grid-area: content;
+  }
+
+  .bookmark {
+    position: relative;
+  }
+  .bookmark::after {
+    content: "";
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    inset: 0;
+    background-color: #3b82f6;
+    clip-path: polygon(
+      50% 0%,
+      80% 10%,
+      100% 35%,
+      100% 70%,
+      80% 90%,
+      50% 100%,
+      20% 90%,
+      0% 70%,
+      0% 35%,
+      20% 10%
+    );
+  }
+  .tooltipContent {
+    position: relative;
+  }
+  .tooltipContent::after {
+    content: "";
+    position: absolute;
+    background-color: var(--primary);
+    top: 100%;
+    clip-path: polygon(47% 100%, 0 0, 100% 0);
+    width: 10rem;
+    height: 10rem;
+    z-index: 4;
+  }
+
+  .sohne {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+  }
+
+  .input {
+    font-family: "PT Serif", serif;
+  }
+
+  textarea {
+    font-family: "Tinos", serif;
+  }
+}
+@media (min-width: 1200px) {
   .main {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-  .profil {
-    justify-content: start;
-    gap: 0.75rem;
-    font-size: 0.875rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 }
