--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -185,8 +185,50 @@ body {
     list-style-type: disc;
   }
 
-  textarea {
+  .input > div .tiptap ol {
+    list-style-type: decimal;
+  }
+
+  textarea,
+  .tl {
     font-family: "Tinos", serif;
+  }
+
+  .animate-open {
+    animation: open-rich-text 0.5s ease-in-out;
+  }
+
+  @keyframes open-rich-text {
+    0% {
+      transform: translateX(-300px);
+      opacity: 0;
+    }
+    10% {
+      opacity: 1;
+    }
+    100% {
+      transform: translateX(0px);
+      opacity: 1;
+    }
+  }
+
+  .animate-close {
+    transform: translateX(-370px);
+    animation: close-rich-text 0.5s ease-in-out;
+  }
+
+  @keyframes close-rich-text {
+    0% {
+      transform: translateX(0px);
+      opacity: 1;
+    }
+    10% {
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(-300px);
+      opacity: 0;
+    }
   }
 }
 /* @media (min-width: 1200px) {
