--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -197,40 +197,44 @@ body {
     font-family: "Tinos", serif;
   }
 
+  .editor-props ul li {
+    list-style-type: disc;
+  }
+
+  .editor-props ol li {
+    list-style-type: decimal;
+  }
+
   .animate-open {
+    width: fit-content;
     animation: open-rich-text 0.5s ease-in-out;
   }
 
   @keyframes open-rich-text {
     0% {
-      transform: translateX(-300px);
+      width: 0%;
       opacity: 0;
     }
-    10% {
-      opacity: 1;
-    }
     100% {
-      transform: translateX(0px);
       opacity: 1;
+      width: fit-content;
     }
   }
 
   .animate-close {
-    transform: translateX(-370px);
+    width: 0%;
+    opacity: 0;
     animation: close-rich-text 0.5s ease-in-out;
   }
 
   @keyframes close-rich-text {
     0% {
-      transform: translateX(0px);
       opacity: 1;
-    }
-    10% {
-      opacity: 0;
+      width: fit-content;
     }
     100% {
-      transform: translateX(-300px);
       opacity: 0;
+      width: 0%;
     }
   }
 }
