--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,7 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Syne:wght@400..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Tinos:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
 
 @layer base {
   :root {
@@ -87,57 +85,30 @@
   }
 }
 
+@font-face {
+  font-family: "Source Serif Pro";
+  src: url("/font/SourceSerifPro-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Source Serif Pro";
+  src: url("/font/SourceSerifPro-Semibold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.noto-font {
+  font-family: "source-serif-pro", Georgia, Cambria, "Times New Roman", Times,
+    serif;
+}
+
 @media (min-width: 1028px) {
-  .main {
-    display: grid;
-    grid-template-columns: 0.8fr auto;
-    grid-template-rows: 70px 1fr;
-    grid-template-areas:
-      "nav sidebar"
-      "content sidebar";
-    gap: 0;
-  }
-
-  .nav {
-    grid-area: nav;
-  }
-
-  .nav::before {
-    content: "";
-    position: absolute;
-    background-color: white;
-    filter: blur(5px);
-    width: 2rem;
-    height: 70px;
-    left: 0;
-    top: -2px;
-    bottom: 0;
-    z-index: 2;
-  }
-  .nav::after {
-    content: "";
-    position: absolute;
-    background-color: white;
-    filter: blur(5px);
-    width: 4rem;
-    height: 70px;
-    right: 0px;
-    top: -2px;
-    bottom: 0;
-    z-index: 2;
-  }
-  .sidebar {
-    grid-area: sidebar;
-    font-family: "Oswald", sans-serif;
-  }
-  .content {
-    grid-area: content;
-  }
-
   .bookmark {
     position: relative;
   }
